<resources>

   <string name="app_name">Task Tracker</string>
   <string name="menu_settings">Settings</string>
   <string name="title">Task Tracker</string>
   <string name="button_add_task">Add Task</string>
   <string name="save_btn">Save Task</string>
   
   <string name="add_menu">Add Task</string>
   <string name="edit_menu">Edit Task</string>
   <string name="delete_menu">Delete Task</string>
   <string name="delete_all">Delete All Tasks</string>
   
   <string name="activity_hint">Activity</string>
   <string name="location_hint">Location</string>
   <string name="starttime_hint">Start Time</string>
   <string name="endtime_hint">End Time</string>
   <string name="observed_hint">Who is Being Observed</string>
   <string name="observer_hint">Who is Observing</string>
   
   <string name="activity_lbl">Activity</string>
   <string name="location_lbl">Location</string>
   <string name="starttime_lbl">Start Time</string>
   <string name="endtime_lbl">End Time</string>
   <string name="observed_lbl">Observed</string>
   <string name="observer_lbl">Observer</string>
   
   <string name="confirmTitle">Are You Sure?</string>
   <string name="confirmMessage">This will permanently Delete the Entry</string>
   <string name="confirmAllMessage">This will permanently Delete ALL Entries</string>
   
   <string name="errorButton">OK</string>
   <string name="errorTitle">Activity is Required</string>
   <string name="errorMessage">You Need to Enter an Activity</string>
   
   <string name="cancel_btn">Cancel</string>
   <string name="delete_btn">Delete</string>
   
    <string name="Observed">Observed</string>
    <string name="Survey">Survey</string>
    <string name="Observer">Observer</string>
    
    <string-array name="arrObserved">
        <item >Dr. Frankenstein</item>
        <item >Dr. Evil</item>
        <item >Dr. Crusher</item>
        <item >Dr. Pletch</item>
        
    </string-array>
    
    <string-array name="arrObserver">
        <item >Leroy</item>
        <item >Ingrid</item>
        <item >Muriel</item>
        <item >Steve</item>
    </string-array>
    
    <string-array name="arrActivities">
        <item >Walking</item>
        <item >On the phone</item>
        <item >Researching</item>
        <item >With a patient</item>
        <item >Reviewing Files</item>
        <item >Talking with Nurses</item>
        <item >Taking a break</item>
        <item >On the Computer</item>
        <item >Restroom</item>
        <item >Other..</item>
    </string-array>
    
    <string name="strObservedPrompt">Whos is being observed?</string>
    <string name="strObserverPrompt">Who is doing the observing</string>
    
    <string name="strBeginSurvey">Begin Survey</string>

</resources>