<?xml version="1.0" encoding="utf-8"?>
  
   <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="fill_parent" 
      android:layout_height="wrap_content"
      android:stretchColumns="1" 
      android:layout_margin="5dp">
   
       <TableRow>         
         <TextView 
            style="@style/StyleLabel"
            android:text="@string/activity_lbl"/>
         <TextView 
            android:id="@+id/activityText" 
            style="@style/StyleText"/>         
      </TableRow>

      <TableRow>         
         <TextView 
            style="@style/StyleLabel"
            android:text="@string/location_lbl"/>         
         <TextView 
            android:id="@+id/locationText"
            style="@style/StyleText"/>         
      </TableRow>

      <TableRow>         
         <TextView 
            style="@style/StyleLabel"
            android:text="@string/starttime_lbl"/>         
         <TextView 
            android:id="@+id/starttimeText"
            style="@style/StyleText"/>         
      </TableRow>

      <TableRow>         
         <TextView 
            style="@style/StyleLabel"
            android:text="@string/endtime_lbl"/>         
         <TextView 
            android:id="@+id/endtimeText"
            style="@style/StyleText"/>         
      </TableRow>

      <TableRow>         
         <TextView 
            style="@style/StyleLabel"
            android:text="@string/observed_lbl"/>         
         <TextView 
            android:id="@+id/observedText"
            style="@style/StyleText"/>         
      </TableRow>

      <TableRow>         
         <TextView 
            style="@style/StyleLabel"
            android:text="@string/observer_lbl"/>         
         <TextView 
            android:id="@+id/observerText"
            style="@style/StyleText"/>         
      </TableRow>
           
   </TableLayout>